@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix canceling/discarding compose message in basic view (Bug #12555).
 * [mms] Fix updating message index when deleting a message in basic message view (Bug #12539).
 * [mms] &apos;trailer&apos; hook now has the user&apos;s identity and the list of recipients passed as parameters.
 * [mms] Add ability to access all reply methods in smartmobile view.
@@ -3268,6 +3269,7 @@
    <date>2013-07-16</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix canceling/discarding compose message in basic view (Bug #12555).
 * [mms] Fix updating message index when deleting a message in basic message view (Bug #12539).
 * [mms] &apos;trailer&apos; hook now has the user&apos;s identity and the list of recipients passed as parameters.
 * [mms] Add ability to access all reply methods in smartmobile view.
